--- a/road-pets-frontend/package.json
+++ b/road-pets-frontend/package.json
@@ -26,10 +26,10 @@
     "cropperjs": "^1.6.2",
     "lightgallery": "^2.8.2",
     "lucide-react": "^0.476.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-cookie": "^7.2.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.7",
     "react-multi-carousel": "^2.8.5",
@@ -39,7 +39,8 @@
     "road-pets-frontend": "file:",
     "styled-components": "^6.1.15",
     "use-places-autocomplete": "^4.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "yet-another-react-lightbox": "^3.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -51,6 +52,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^5.0.12"
   }
 }
